# gnome-multi-writer

./: .gitlab-ci.yml  Makefile.am  NEWS  NewIssue  README  README.md  RELEASE  autogen.sh  configure.ac  gnome-multi-writer.doap  meson.build
.tx/: config
contrib/: .gitignore  gnome-multi-writer.spec.in
data/: Makefile.am  gmw-main.ui  gmw-menus.ui  meson.build  org.gnome.MultiWriter.desktop.in  org.gnome.MultiWriter.gschema.xml  org.gnome.MultiWriter.policy.in
data/appdata/: Makefile.am  meson.build  org.gnome.MultiWriter.appdata.xml.in
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
man/: Makefile.am  gnome-multi-writer.sgml  meson.build
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  es_ES.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gl_ES.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+9 more)
src/: Makefile.am  gmw-cleanup.h  gmw-device.c  gmw-device.h  gmw-main.c  gmw-main.ui  gmw-menus.ui  gmw-probe.c  gnome-multi-writer.gresource.xml  meson.build
