install_data('16x16/org.gnome.MultiWriter.png',
             install_dir : join_paths(prefixed_datadir, 'icons/hicolor/16x16/apps'))
install_data('22x22/org.gnome.MultiWriter.png',
             install_dir : join_paths(prefixed_datadir, 'icons/hicolor/22x22/apps'))
install_data('32x32/org.gnome.MultiWriter.png',
             install_dir : join_paths(prefixed_datadir, 'icons/hicolor/32x32/apps'))
install_data('48x48/org.gnome.MultiWriter.png',
             install_dir : join_paths(prefixed_datadir, 'icons/hicolor/48x48/apps'))
install_data('256x256/org.gnome.MultiWriter.png',
             install_dir : join_paths(prefixed_datadir, 'icons/hicolor/256x256/apps'))
